--- a/css/admin.css
+++ b/css/admin.css
@@ -2,6 +2,11 @@
 	margin: 0;
 }
 
+#cms-content-tools-ModelAdmin div.CompositeField.dateselector label.left {
+  width: auto;
+  float: none;
+}
+
 #cms-content-tools-ModelAdmin div.dateselectorfield,
 #cms-content-tools-ModelAdmin .rangeselectedfrom div.dropdown,
 #cms-content-tools-ModelAdmin .rangeselectedto div.dropdown {
@@ -9,4 +14,9 @@
 	width: 33.3333%;
 	float: left;
 	clear: none;
+	-webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding-right: 10px;
+  padding-left: 0px;
 }
